upload to private nexus in TossLab

--- a/android-image-zoom-crop/build.gradle
+++ b/android-image-zoom-crop/build.gradle
@@ -1,25 +1,86 @@
 apply plugin: 'com.android.library'
+apply plugin: 'com.github.dcendents.android-maven'
+apply from: "$rootDir/artifacts.gradle"
 
-android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.1"
-
-    defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 23
-        versionCode 1
-        versionName "1.0"
+buildscript {
+    repositories {
+        jcenter()
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+
+    dependencies {
+        classpath "com.github.dcendents:android-maven-gradle-plugin:${rootProject.ext.androidMavenGradlePlugin}"
     }
 }
 
+android {
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
+
+    defaultConfig {
+        minSdkVersion rootProject.ext.minSdkVersion
+    }
+
+    lintOptions {
+        abortOnError false
+    }
+
+
+    packagingOptions.excludes = [
+            'META-INF/DEPENDENCIES',
+            'META-INF/LICENSE',
+            'META-INF/LICENSE.txt',
+            'LICENSE.txt',
+            'LICENSE',
+            'META-INF/license.txt',
+            'META-INF/NOTICE',
+            'NOTICE',
+            'asm-license.txt',
+            'META-INF/NOTICE.txt',
+            'META-INF/notice.txt',
+            'META-INF/ASL2.0'
+    ]
+}
+
+group = "com.tosslab.jandi.lib"
+version = 1.1
+
+
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:23.1.0'
+    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
+}
+
+install {
+    repositories.mavenInstaller.pom.project {
+        name "Sprinkler"
+        description "For Analytics"
+        packaging "aar"
+        url "https://github.com/tosslab/AndroidImageZoomCrop.git"
+
+        licenses {
+            license {
+                distribution "repo"
+            }
+        }
+
+        scm {
+            url "scm:git:https://github.com/tosslab/AndroidImageZoomCrop.git.git"
+            connection "scm:git:https://github.com/tosslab/AndroidImageZoomCrop.git.git"
+        }
+
+        developers {
+            developer {
+                id 'tony.park'
+                name 'Tony Park'
+            }
+            developer {
+                id 'tee.kim'
+                name 'Tee Kim'
+            }
+            developer {
+                id 'steve.jung'
+                name 'Steve Jung'
+            }
+        }
+    }
 }
